Created Outer repo for an interface with the outer world. New changes to the rest.

--- a/WebPoll/WebPoll/Views/Artist/index.cshtml
+++ b/WebPoll/WebPoll/Views/Artist/index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebPoll.Models.Artist >
+﻿@model IEnumerable<WebPoll.Model.Models.Artist>
 
 @{
     ViewData["Title"] = "index";
