--- a/WebPoll/WebPoll/Views/Genre/index.cshtml
+++ b/WebPoll/WebPoll/Views/Genre/index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<WebPoll.Models.Gender>
+﻿@model IEnumerable<WebPoll.Model.Models.Genre>
 
 @{
     ViewData["Title"] = "View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Genders</h2>
+<h2>Genres</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
