--- a/WebPoll/WebPoll/Views/Shared/_Layout.cshtml
+++ b/WebPoll/WebPoll/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Music" asp-action="Index">Music</a></li>
 					<li><a asp-area="" asp-controller="Artist" asp-action="Index">Artist</a></li>
-					<li><a asp-area="" asp-controller="Gender" asp-action="Index">Gender</a></li>
+					<li><a asp-area="" asp-controller="Genre" asp-action="Index">Genre</a></li>
                 </ul>
             </div>
         </div>
