--- a/WebPoll/WebPoll/Views/Genre/create.cshtml
+++ b/WebPoll/WebPoll/Views/Genre/create.cshtml
@@ -1,26 +1,25 @@
-﻿@model WebPoll.Models.Gender
+﻿@model WebPoll.Model.Models.Genre
 
 @{
-    ViewData["Title"] = "edit";
+    ViewData["Title"] = "create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>edit</h2>
+<h2>create</h2>
 
-<h4>Gender</h4>
+<h4>Genre</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="edit">
+        <form asp-action="create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label">@Html.DisplayFor(modelItem => Model.Name)</label>
+                <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
