--- a/WebPoll/WebPoll/Views/Genre/details.cshtml
+++ b/WebPoll/WebPoll/Views/Genre/details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebPoll.Models.Gender
+﻿@model WebPoll.Model.Models.Genre
 
 @{
     ViewData["Title"] = "details";
@@ -8,7 +8,7 @@
 <h2>Details of @Model.Name</h2>
 
 <div>
-    <h4>Gender</h4>
+    <h4>Genre</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
