--- a/WebPoll/WebPoll/Views/Genre/edit.cshtml
+++ b/WebPoll/WebPoll/Views/Genre/edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model WebPoll.Model.Models.Artist
+﻿@model WebPoll.Model.Models.Genre
 
 @{
     ViewData["Title"] = "edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit @Model.Name</h2>
+<h2>edit</h2>
 
-<h4>Artist</h4>
+<h4>Gender</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">@Html.DisplayFor(modelItem => Model.Name)</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
