--- a/WebPoll/WebPoll/Views/Music/index.cshtml
+++ b/WebPoll/WebPoll/Views/Music/index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebPoll.Models.Music>
+﻿@model IEnumerable<WebPoll.Model.Models.Music>
 
 @{
 	ViewData["Title"] = "index";
@@ -30,7 +30,7 @@
 					@Html.DisplayFor(modelItem => item.Artist)
 				</td>
 				<td>
-					@Html.DisplayFor(modelItem => item.Gender)
+					@Html.DisplayFor(modelItem => item.Genre)
 				</td>
 				<td>
 					<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
