--- a/WebPoll/WebPoll/Views/Artist/details.cshtml
+++ b/WebPoll/WebPoll/Views/Artist/details.cshtml
@@ -8,16 +8,34 @@
 <h2>Details of @Model.Name</h2>
 
 <div>
-    <h4>Artist</h4>
+    <h4>Musics</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+    
+	<table class="table">
+		<thead>
+			<tr>
+				<th>
+					@Html.DisplayNameFor(model => model.Name)
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var item in Model.Musics)
+			{
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.Name)
+					</td>
+					<td>
+						<a asp-controller="Music" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+						<a asp-controller="Music" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
