--- a/WebPoll/WebPoll/Views/Music/index.cshtml
+++ b/WebPoll/WebPoll/Views/Music/index.cshtml
@@ -5,10 +5,10 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>index</h2>
+<h2>Musics</h2>
 
 <p>
-	<a asp-action="Create">Create New</a>
+	<a asp-action="Create">Add a new music</a>
 </p>
 <table class="table">
 	<thead>
@@ -16,7 +16,12 @@
 			<th>
 				@Html.DisplayNameFor(model => model.Name)
 			</th>
-			<th></th>
+			<th>
+				@Html.DisplayNameFor(model => model.Artist)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Genre)
+			</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -27,10 +32,10 @@
 					@Html.DisplayFor(modelItem => item.Name)
 				</td>
 				<td>
-					@Html.DisplayFor(modelItem => item.Artist)
+					@Html.DisplayFor(modelItem => item.Artist.Name)
 				</td>
 				<td>
-					@Html.DisplayFor(modelItem => item.Genre)
+					@Html.DisplayFor(modelItem => item.Genre.Name)
 				</td>
 				<td>
 					<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
